Remove threads, add celery, redis
